--- a/src/saleManagement/View/Home.fxml
+++ b/src/saleManagement/View/Home.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="900.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saleManagement.Controller.TableController">
+<AnchorPane prefHeight="900.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saleManagement.Controller.HomeController">
    <children>
       <BorderPane prefHeight="900.0" prefWidth="1200.0" stylesheets="@../../resource/stylesheet.css">
          <center>
