--- a/src/saleManagement/View/Dashboard.fxml
+++ b/src/saleManagement/View/Dashboard.fxml
@@ -1,106 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saleManagement.Controller.DashboardController">
    <children>
-      <BorderPane fx:id="borderPane" prefHeight="800.0" prefWidth="1200.0" styleClass="linear-grad" stylesheets="@../../resource/stylesheet.css">
+      <BorderPane fx:id="borderPane" prefHeight="800.0" prefWidth="1200.0" styleClass="backgroundC" stylesheets="@../../resource/stylesheet.css">
          <top>
-            <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="1200.0" styleClass="shadow" BorderPane.alignment="CENTER">
+            <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="1200.0" styleClass="backgroundMenu" BorderPane.alignment="CENTER">
                <children>
-                  <Label alignment="CENTER" prefHeight="70.0" prefWidth="154.0" text="Dashboard" textFill="WHITE">
+                  <Label alignment="CENTER" prefHeight="70.0" prefWidth="151.0" styleClass="labelMN" text="S-Repo" textFill="WHITE">
                      <font>
                         <Font name="Calibri Bold" size="30.0" />
                      </font>
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../resource/img/Label.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Label>
-                  <Pane maxHeight="-Infinity" prefHeight="1.0" prefWidth="1.0" styleClass="line-color" HBox.hgrow="ALWAYS" />
-                  <ImageView fitHeight="47.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../resource/img/heart.png" />
-                     </image>
-                  </ImageView>
+                  <Pane prefHeight="45.0" prefWidth="540.0" />
+                  <Button fx:id="homeButton" alignment="CENTER_RIGHT" contentDisplay="TOP" mnemonicParsing="false" onAction="#homButtonPressed" prefHeight="150.0" styleClass="dash" text="Overview">
+                     <font>
+                        <Font name="Calibri" size="17.0" />
+                     </font>
+                     <effect>
+                        <Blend />
+                     </effect>
+                  </Button>
+                  <Button fx:id="stockButton" alignment="CENTER_RIGHT" contentDisplay="TOP" mnemonicParsing="false" onAction="#stockButtonPressed" prefHeight="70.0" styleClass="dash" text="Repository">
+                     <font>
+                        <Font name="Calibri" size="17.0" />
+                     </font>
+                     <effect>
+                        <Blend />
+                     </effect>
+                  </Button>
+                  <Button fx:id="historyButton" alignment="CENTER_RIGHT" contentDisplay="TOP" mnemonicParsing="false" onAction="#historyButtonPressed" prefHeight="150.0" styleClass="dash" text="History">
+                     <font>
+                        <Font name="Calibri" size="17.0" />
+                     </font>
+                     <effect>
+                        <Blend />
+                     </effect>
+                  </Button>
+                  <Button fx:id="helpButton" alignment="CENTER_RIGHT" contentDisplay="TOP" mnemonicParsing="false" onAction="#helpButtonPressed" prefHeight="150.0" styleClass="dash" text="Help">
+                     <font>
+                        <Font name="Calibri" size="17.0" />
+                     </font>
+                     <effect>
+                        <Blend />
+                     </effect>
+                  </Button>
+                  <Button fx:id="logoutButton" alignment="CENTER_RIGHT" contentDisplay="TOP" mnemonicParsing="false" onAction="#logoutButtonPressed" prefHeight="150.0" styleClass="dash" text="Logout">
+                     <font>
+                        <Font name="Calibri" size="17.0" />
+                     </font>
+                     <effect>
+                        <Blend />
+                     </effect>
+                  </Button>
+                  <Label fx:id="userLabel" alignment="CENTER_RIGHT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="56.0" prefWidth="111.0" styleClass="dash" text="Welcome" textFill="#748cc6">
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../resource/img/user.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
                </children>
             </HBox>
          </top>
-         <left>
-            <VBox prefHeight="710.0" prefWidth="135.0" styleClass="transparentCon" BorderPane.alignment="CENTER">
-               <BorderPane.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </BorderPane.margin>
-               <children>
-                  <Button fx:id="homeButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#homButtonPressed" prefHeight="150.0" prefWidth="170.0" styleClass="dash" text="Home">
-                     <font>
-                        <Font name="Calibri" size="30.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../resource/img/home.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button fx:id="stockButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#stockButtonPressed" prefHeight="150.0" prefWidth="170.0" styleClass="dash" text="Stock">
-                     <font>
-                        <Font name="Calibri" size="30.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../resource/img/stock.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button fx:id="historyButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#historyButtonPressed" prefHeight="150.0" prefWidth="170.0" styleClass="dash" text="History">
-                     <font>
-                        <Font name="Calibri" size="30.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../resource/img/history.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button fx:id="helpButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#helpButtonPressed" prefHeight="150.0" prefWidth="170.0" styleClass="dash" text="Help">
-                     <font>
-                        <Font name="Calibri" size="30.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../resource/img/help.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button fx:id="logoutButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#logoutButtonPressed" prefHeight="150.0" prefWidth="170.0" styleClass="dash" text="Logout">
-                     <font>
-                        <Font name="Calibri" size="30.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../resource/img/logout.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-               </children>
-            </VBox>
-         </left>
       </BorderPane>
    </children>
 </AnchorPane>
