--- a/src/saleManagement/View/Repository.fxml
+++ b/src/saleManagement/View/Repository.fxml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="755.0" prefWidth="1200.0" stylesheets="@../../resource/stylesheet.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saleManagement.Controller.RepositoryController">
+<AnchorPane prefHeight="755.0" prefWidth="1200.0" stylesheets="@../../resource/stylesheet.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saleManagement.Controller.RepositoryController">
    <children>
       <BorderPane prefHeight="755.0" prefWidth="1200.0">
          <center>
-            <TableView fx:id="productsTable" prefHeight="200.0" prefWidth="200.0" styleClass="backgroundC" BorderPane.alignment="CENTER">
+            <TableView fx:id="productsTable" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <columns>
-                  <TableColumn fx:id="productName" editable="false" minWidth="20.0" prefWidth="117.0" styleClass="backgroundMENU" text="Product Name" />
+                  <TableColumn fx:id="productName" editable="false" minWidth="20.0" prefWidth="117.0" text="Product Name" />
                   <TableColumn fx:id="productCode" editable="false" minWidth="20.0" prefWidth="116.0" styleClass="backgroundMENU" text="Product Code" />
                   <TableColumn fx:id="category" editable="false" minWidth="20.0" prefWidth="115.0" styleClass="backgroundMENU" text="Category" />
                   <TableColumn fx:id="quantity" editable="false" minWidth="20.0" prefWidth="114.0" styleClass="backgroundMENU" text="Quantity In Stock" />
                   <TableColumn fx:id="measure" editable="false" minWidth="20.0" prefWidth="71.0" styleClass="backgroundMENU" text="Measure" />
-                  <TableColumn fx:id="unitPrice" editable="false" prefWidth="70.0" text="Price" />
-                  <TableColumn fx:id="details" prefWidth="369.0" text="Details" />
+                  <TableColumn fx:id="unitPrice" editable="false" prefWidth="70.0" text="Price $" />
+                  <TableColumn fx:id="details" prefWidth="398.0" text="Details" />
                </columns>
             </TableView>
          </center>
          <left>
-            <HBox prefHeight="755.0" prefWidth="227.0" styleClass="backgroundC" BorderPane.alignment="CENTER" />
+            <VBox prefHeight="755.0" prefWidth="198.0" styleClass="table-view" BorderPane.alignment="CENTER">
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="99.0" prefWidth="262.0" text="Import" />
+                  <Button mnemonicParsing="false" prefHeight="103.0" prefWidth="258.0" text="Export" />
+                  <Button mnemonicParsing="false" prefHeight="102.0" prefWidth="241.0" text="Advanced Search" />
+                  <Button mnemonicParsing="false" prefHeight="96.0" prefWidth="214.0" text="Last Transaction" />
+               </children></VBox>
          </left>
       </BorderPane>
    </children>
