--- a/src/saleManagement/View/Login.fxml
+++ b/src/saleManagement/View/Login.fxml
@@ -11,18 +11,18 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="800" maxWidth="1200" minHeight="800" minWidth="1200" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saleManagement.Controller.LoginController">
+<AnchorPane maxHeight="800" maxWidth="1200" minHeight="800" minWidth="1200" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saleManagement.Controller.LoginController">
    <children>
       <BorderPane prefHeight="800.0" prefWidth="1200.0">
          <right>
             <Pane prefHeight="600.0" prefWidth="500.0" stylesheets="@../../resource/stylesheet.css" BorderPane.alignment="CENTER">
                <children>
-                  <TextField fx:id="account" layoutX="125.0" layoutY="254.0" prefHeight="60.0" prefWidth="280.0" promptText="Account">
+                  <TextField fx:id="account" layoutX="125.0" layoutY="254.0" onAction="#loginPressed" prefHeight="60.0" prefWidth="280.0" promptText="Account">
                      <font>
                         <Font name="Calibri" size="18.0" />
                      </font>
                   </TextField>
-                  <PasswordField fx:id="password" layoutX="125.0" layoutY="346.0" prefHeight="60.0" prefWidth="280.0" promptText="Password">
+                  <PasswordField fx:id="password" layoutX="125.0" layoutY="346.0" onAction="#loginPressed" prefHeight="60.0" prefWidth="280.0" promptText="Password">
                      <font>
                         <Font name="Calibri" size="18.0" />
                      </font>
